--- a/producer_webhook/Dockerfile
+++ b/producer_webhook/Dockerfile
@@ -2,16 +2,13 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-# Добавляем общую папку в PYTHONPATH
-ENV PYTHONPATH "${PYTHONPATH}:/app"
-
-# Копирование файла зависимостей и их установка
-COPY requirements.txt .
+# Копируем requirements из папки producer_webhook и устанавливаем зависимости
+COPY producer_webhook/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Копирование кода приложения и общей папки
-COPY producer_webhook/ /app/producer_webhook/
+# Копируем код producer_webhook и shared в рабочую директорию
+COPY producer_webhook/ /app/
 COPY shared/ /app/shared/
 
-# Запуск приложения
-CMD ["uvicorn", "producer_webhook.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Запускаем приложение
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
