--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,7 +1,8 @@
 FROM python:3.12-slim
 WORKDIR /app
-COPY requirements.txt .
+COPY api/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
-COPY main.py .
+COPY api/main.py .
+COPY shared/ /app/shared/
 ENV PORT=8080
 CMD ["uvicorn","main:app","--host","0.0.0.0","--port","8080"]
