--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,7 @@ services:
     ports:
       - "5672:5672"
       - "15672:15672"
-    environment:
-      RABBITMQ_DEFAULT_USER: guest
-      RABBITMQ_DEFAULT_PASS: guest
+    # No external env vars needed, uses defaults
     healthcheck:
       test: ["CMD", "rabbitmq-diagnostics", "check_port_connectivity"]
       interval: 10s
@@ -18,7 +16,7 @@ services:
 
   redis:
     image: redis:7
-    command: ["redis-server","--appendonly","yes"]
+    command: ["redis-server", "--appendonly", "yes"]
     ports:
       - "6379:6379"
     healthcheck:
@@ -30,6 +28,7 @@ services:
 
   postgres:
     image: postgres:15
+    env_file: .env # Only Postgres and Config-Server need the .env for bootstrap
     environment:
       POSTGRES_DB: ${POSTGRES_DB:-app_db}
       POSTGRES_USER: ${POSTGRES_USER:-app_user}
@@ -45,71 +44,88 @@ services:
       retries: 5
     restart: unless-stopped
 
-  producer:
-    build: ./producer
-    env_file: .env
-    environment:
-      - PYTHONUNBUFFERED=1
-    depends_on:
-      rabbitmq:
-        condition: service_healthy
-      config-server:
-        condition: service_started # Зависит от старта конфиг-сервера
-    restart: unless-stopped
-
-  producer-webhook:
-    build: ./producer_webhook
-    env_file: .env
-    ports:
-      - "8000:8000"
-    environment:
-      - PYTHONUNBUFFERED=1
-    depends_on:
-      rabbitmq:
-        condition: service_healthy
-      config-server:
-        condition: service_started # Зависит от старта конфиг-сервера
-    restart: unless-stopped
-
-  consumer:
-    build: ./consumer
-    env_file: .env
-    environment:
-      - PYTHONUNBUFFERED=1
-    depends_on:
-      rabbitmq:
-        condition: service_healthy
-      redis:
-        condition: service_healthy
-      config-server:
-        condition: service_started # Зависит от старта конфиг-сервера
-    restart: unless-stopped
-
-  api:
-    build: ./api
-    env_file: .env
-    environment:
-      PORT: ${API_PORT}
-    ports:
-      - "${API_PORT}:${API_PORT}"
-    depends_on:
-      redis:
-        condition: service_healthy
-      config-server:
-        condition: service_started # Зависит от старта конфиг-сервера
-    restart: unless-stopped
-
   config-server:
-    build: ./config-server
-    env_file: .env
+    build:
+      context: .
+      dockerfile: config-server/Dockerfile
+    env_file: .env # For DB connection and the master key
     ports:
-      - "8090:8090" # Отдельный порт для API управления конфигами
+      - "8090:8090"
+    environment:
+      - PYTHONUNBUFFERED=1
+      # Pass all necessary DB variables to the entrypoint script
+      - POSTGRES_HOST=postgres
+      - POSTGRES_USER=app_user
+      - POSTGRES_PASSWORD=app_pass
+      - POSTGRES_DB=app_db
+      # The master key is injected here and only here
+      - CONFIG_ENCRYPTION_KEY=${CONFIG_ENCRYPTION_KEY}
     depends_on:
       postgres:
         condition: service_healthy
       rabbitmq:
         condition: service_healthy
       redis:
+        condition: service_healthy
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8090/healthz"]
+      interval: 15s
+      timeout: 5s
+      retries: 5
+    restart: unless-stopped
+
+  producer:
+    build:
+      context: .
+      dockerfile: ./producer/Dockerfile
+    # env_file is removed. Config comes from config-server
+    environment:
+      - PYTHONUNBUFFERED=1
+      - CONFIG_SERVER_URL=http://config-server:8090
+    depends_on:
+      config-server:
+        condition: service_healthy # Wait for config-server to be fully ready
+    restart: unless-stopped
+
+  producer-webhook:
+    build:
+      context: .
+      dockerfile: ./producer_webhook/Dockerfile
+    ports:
+      - "8000:8000"
+    environment:
+      - PYTHONUNBUFFERED=1
+      - CONFIG_SERVER_URL=http://config-server:8090
+    depends_on:
+      config-server:
+        condition: service_healthy
+    restart: unless-stopped
+
+  consumer:
+    build:
+      context: .
+      dockerfile: ./consumer/Dockerfile
+    environment:
+      - PYTHONUNBUFFERED=1
+      - CONFIG_SERVER_URL=http://config-server:8090
+    depends_on:
+      config-server:
+        condition: service_healthy
+    restart: unless-stopped
+
+  api:
+    build:
+      context: .
+      dockerfile: api/Dockerfile
+    environment:
+      - PYTHONUNBUFFERED=1
+      - CONFIG_SERVER_URL=http://config-server:8090
+      # The port is now managed by config-server, but we still need to publish it
+      - API_PORT=${API_PORT:-8080}
+    ports:
+      - "${API_PORT:-8080}:${API_PORT:-8080}"
+    depends_on:
+      config-server:
         condition: service_healthy
     restart: unless-stopped
 
