--- a/config-server/Dockerfile
+++ b/config-server/Dockerfile
@@ -3,15 +3,16 @@ FROM python:3.11-slim
 WORKDIR /app
 
 # Install postgresql-client and curl for health checks
-RUN apt-get update && apt-get install -y postgresql-client curl && rm -rf /var/lib/apt/lists/*
+# Устанавливаем зависимости и утилиту для конвертации строк
+RUN apt-get update && apt-get install -y postgresql-client curl dos2unix && rm -rf /var/lib/apt/lists/*
 
 COPY config-server/requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY config-server/ .
 
-# Make the entrypoint script executable
-RUN chmod +x /app/entrypoint.sh
+# Convert line endings and make the entrypoint script executable
+RUN dos2unix /app/entrypoint.sh && chmod +x /app/entrypoint.sh
 
 # Set the entrypoint
 ENTRYPOINT ["/app/entrypoint.sh"]
